-
Bug
-
Resolution: Done
-
P1: Critical
-
5.2.0 Beta1
-
20db3ac1e11d528ab2a924fd10764d903e8c1b4b, 3be9c4bca30acf109cda87a9c53849ba328c45db
TextField has no editingFinished signal like LineEdit
TextField only has accepted() that needs the user to press "Enter", but is not triggered by a change of focus.
Since there is no signal for focus changes, we cannot even imitate editingFinished() from LineEdit.
With the current TextField I do not know how to solve: QTCREATORBUG-10748
- relates to
-
QTBUG-34943 add editingFinished signal in TextInput
-
- Closed
-
-
QTBUG-44734 TextArea component lack of an editingFinished signal
-
- Closed
-
For Gerrit Dashboard: QTBUG-34780 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
71259,7 | TextField: add editingFinished signal | release | qt/qtquickcontrols | Status: MERGED | +2 | 0 |
71705,5 | SpinBox: add editingFinished signal | release | qt/qtquickcontrols | Status: MERGED | +2 | 0 |